--- a/style.css
+++ b/style.css
@@ -75,3 +75,75 @@ align-items:stretch;
     min-width:10px;
     flex:1;
 }
+.example5{
+    flex-direction:column;
+}
+.yellowline{
+    min-height:30px;
+    margin:3px;
+    background-color:yellow;
+    flex:1;
+}
+.bars{
+    display:flex;
+    flex-direction:row;
+    flex:6;
+    justify-content:space-around;
+}
+.bar{
+    background-color:blue;
+    width:5%;
+    min-height:300px;
+}
+.example6{
+    min-height:200px;
+}
+
+.child1{
+    min-height:100px;
+    min-width:100px;
+    flex:1;
+    margin:2px;
+}
+.child2{
+    min-height:100px;
+    min-width:100px;
+    flex:3;
+    margin:2px;
+    flex-direction:column;
+}
+
+.darkblue{
+    background-color:blue;
+    min-height:100px;
+    width:100%;
+    flex:1;
+}
+.grandchild1{
+    min-height:100px;
+    width:100%;
+    flex:1;
+    display:flex;
+    flex-direction:row;
+}
+.lightblue{
+    background-color:lightblue;
+    min-height:50px;
+    width:100%;
+    margin:2px;
+}
+.g-grandchild1{
+    min-height:50px;
+    width:100%;
+    margin:2px;
+    display:flex;
+    flex-direction: column;
+    justify-content:space-between;
+}
+.lime{
+    background-color:lime;
+    width:100%;
+    height:40%;
+    margin:2px;
+    flex:1;
+}
